k8s/engine-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-db
  labels:
    app: engine-db
spec:
  selector:
    app: engine-db
  ports:
    - port: 5432
      targetPort: engine-db-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-db
  labels:
    app: engine-db
spec:
  selector:
    matchLabels:
      app: engine-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: engine-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode-1
      containers:
        - name: engine-postgres
          image: docker.io/library/postgres:15.4
          args: ["-c", "idle_in_transaction_session_timeout=60s"]
          #attach:
          ports:
            - name: engine-db-port
              containerPort: 5432
          volumeMounts:
            - name: engine-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: engine-db-storage
          persistentVolumeClaim:
            claimName: engine-db-pv-claim
