k8s/engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    app: engine
spec:
  type: LoadBalancer
  selector:
    app: engine
  ports:
    - name: engine-http
      port: 8090
      targetPort: engine-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  labels:
    app: engine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
      annotations:
        # Prometheus configuration
        prometheus.io/scrape: "true"
        prometheus.io/path: "/api/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: engine
          image: sedstef/opensbpm-engine:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
          ports:
            - name: engine-http
              containerPort: 8090
          livenessProbe:
            httpGet:
              port: 8090
              path: /api/actuator/health
            initialDelaySeconds: 35
            #periodSeconds: 2
#          readinessProbe:
#            httpGet:
#              port: 8090
#              path: /api/actuator/health
#            initialDelaySeconds: 35
      restartPolicy: Always
