k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: frontend-http
      port: 3000
      targetPort: frontend-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sedstef/opensbpm-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: frontend-http
              containerPort: 3000
      restartPolicy: Always
