k8s/keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  selector:
    app: keycloak-db
  ports:
    - port: 5432
      targetPort: kc-db-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  selector:
    matchLabels:
      app: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      nodeSelector:
        #kubernetes.io/hostname: workernode-1
        kubernetes.io/hostname: controlplane
      containers:
        - name: keycloak-postgres
          image: docker.io/library/postgres:15.4
          ports:
            - name: kc-db-port
              containerPort: 5432
          volumeMounts:
            - name: keycloak-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: keycloak-db-storage
          persistentVolumeClaim:
            claimName: keycloak-db-pv-claim
