k8s/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
    - name: keycloak-http
      port: 8080
      targetPort: keycloak-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode-1
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.4
          args: [ "start"]
          ports:
            - name: keycloak-http
              containerPort: 8080
      restartPolicy: Always
