k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensbpm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - hosts:
        - opensbpm.local
#      secretName: games2click-tls
  rules:
    - host: opensbpm.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: keycloak-http
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: engine
                port:
                  name: engine-http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: frontend-http
